--- a/css/home.css
+++ b/css/home.css
@@ -1,39 +1,47 @@
-    body {
-      background-image: url('../images/image.png');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      min-height: 100vh;
-    }
+body {
+  background-image: url('../images/image.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
 
-    main {
-      height: 80vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+main {
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-     /* Footer Styles */
-     footer {
-      background-image: linear-gradient(to right, #007a5e, #00a382);
-      padding: 1.5rem;
-      text-align: center;
-      font-size: 1rem;
-      color: #fff;
-    }
+ /* Footer Styles */
+ footer {
+  background-image: linear-gradient(to right, #007a5e, #00a382);
+  padding: 1.5rem;
+  text-align: center;
+  font-size: 1rem;
+  color: #fff;
+  
+}
 
-    footer a {
-      color: #fff;
-      text-decoration: none;
-    }
+footer a {
+  color: #fff;
+  text-decoration: none;
+  
+}
+a:hover {
+  color: white;
+  text-decoration: none;
+}
 
-    footer a:hover {
-      text-decoration: underline;
-    }
+footer a:hover {
+  background-color: white;
+  color: #007a5e;
+  
+}
 
-    footer img {
-      max-height: 60px;
-      max-width: 60px;
-      margin-left: 0.5rem;
-      vertical-align: middle;
-    }
+footer img {
+  max-height: 60px;
+  max-width: 60px;
+  margin-left: 0.5rem;
+  vertical-align: middle;
+}
