--- a/css/register.css
+++ b/css/register.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('road.png');
+  background-image: url('../images/road.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
