--- a/css/routesuggestion.css
+++ b/css/routesuggestion.css
@@ -97,3 +97,18 @@ body {
     margin-left: 0.5rem;
     vertical-align: middle;
   }
+
+  #map {
+    height: 100vh;
+    width: 100vw; 
+  }
+
+  #info {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background: white;
+    padding: 10px;
+    z-index: 1;
+    border-radius: 5px;
+  }
