--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,17 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   min-height: 100vh;
+ 
+}
+body::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
 }
 
 main {
